<resources>
    <string name="app_name">Musify</string>
    <string name="titleOfSplash">Musify is an application to view and enjoy music</string>
    <string name="title_activity_artist">Artist</string>
    <string name="singerName1">تامر حسني</string>
    <string name="singerAge1">السن: 43</string>
    <string name="singerNationality1">الجنسية: مصري</string>
    <string name="singerSongsCount1">عدد الاغاني: 262</string>
    <string name="singerName2">كاظم الساهر</string>
    <string name="singerAge2">السن: 63</string>
    <string name="singerNationality2">الجنسية: العراق</string>
    <string name="singerSongsCount2">عدد الاغاني: 215</string>
    <string name="singerName3">عمرو دياب</string>
    <string name="singerAge3">السن : 59</string>
    <string name="singerNationality3">الجنسية: مصري</string>
    <string name="singerSongsCount3">عدد الاغاني: 97</string>
    <string name="singerName4">ام كلثوم</string>
    <string name="singerAge4">السن: 76</string>
    <string name="singerNationality4">الجنسية: مصرية</string>
    <string name="singerSongsCount4">عدد الاغاني: 700</string>
    <string name="btnOfSongsActivity">Songs</string>
    <string name="btnOfArtistActivity">Artists</string>
    <string name="most_populer">Most Popular</string>
    <string name="ArtistsPage">Artists</string>
    <string name="SongsPage">Songs</string>
    <string name="arrayOfSongs">اسم الاغنية</string>
    <string name="arrayOfSingers">اسم المغني</string>
    <string name="allashahidText">الله شاهد</string>
    <string name="erfa3edakText">ارفع ايدك</string>
    <string name="saba7el5erText">صباح الخير</string>
    <string name="eedeloshakText">عيد العشاق</string>
    <string name="entaomryText">انت عمري</string>
    <string name="sirtelhobText">سيرة الحب</string>
    <string name="habibyText">حبيبي</string>
    <string name="shoknaText">شوقنا</string>
    <string name="ArtistToast">You are now in Artist Page</string>
    <string name="SongsToast">You are now in Songs Page</string>
</resources>