<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundofallpages"
    tools:context=".Artist">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="270dp"
                android:layout_height="450dp"
                android:layout_marginLeft="68dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tamerart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/singerName1"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:text="@string/singerAge1"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="115dp"
                    android:gravity="center"
                    android:text="@string/singerNationality1"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="170dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerSongsCount1"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="270dp"
                android:layout_height="450dp"
                android:layout_marginLeft="68dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/kazemart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerName2"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerAge2"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="115dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerNationality2"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="170dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerSongsCount2"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="270dp"
                android:layout_height="450dp"
                android:layout_marginLeft="68dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    android:src="@drawable/amrart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerName3"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerAge3"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="115dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerNationality3"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="170dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerSongsCount3"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="270dp"
                android:layout_height="450dp"
                android:layout_marginLeft="68dp"
                android:layout_marginRight="68dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:src="@drawable/omart1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerName4"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:text="@string/singerAge4"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="115dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerNationality4"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="170dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/singerSongsCount4"
                    android:textSize="@dimen/textSizeOfArtistTextAndTitleOfSongs" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/songs_btn"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/shapes_of_buttons"
        android:text="@string/btnOfSongsActivity"
        android:textAllCaps="false"
        android:textColor="@color/colorsOfIntentBtn"
        android:textSize="@dimen/buttonsOfIntents"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />
</androidx.constraintlayout.widget.ConstraintLayout>